[package]
name = "testing_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bevy = {version = "0.11" }
bevy_asset_loader = {version = "0.17.0", features = ["standard_dynamic_assets"] }
bevy_common_assets = { version = "0.7.0", features = ["ron"] }
serde = "1.0.188"
